Дипломный проект svc fix#1